2010-04-14	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/SNMP/Cisco/Catalyst_2950.pm: Added a note that SNMPv3 
	support doesn't work

2010-04-09	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/addons/accounting.pl, pf/addons/recovery.pl: hack to make tests
	work successfully in our new build env.

2010-04-08	Regis Balzard <rbalzard@inverse.ca>
	* pf/sbin/pfdhcplistener: Fix call to non-existing script lookup_node.pl
	Fixes 858;
	http://www.packetfence.org/mantis/view.php?id=858

2010-04-08	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/SNMP/Foundry.pm: Fixed a couple of issues with port-security
	and VLAN changes if ifIndex doesn't change

2010-04-07	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/SNMP/Foundry.pm: Port security implementation

2010-04-06	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/packetfence.spec: Snapshot 1.8.8-0.20100311
	- Added addons/loadMACintoDB.pl to rpm spec

	* pf/conf/pf-release: Version bump to 1.8.8dev (forgot to do earlier)

	* pf/lib/pf/ifoctetslog.pm, pf/lib/pf/locationlog.pm: Fixed a context
	issue with database queries related to mac history, switchport history
	and user bandwidth accounting. Also fixed a slight mistake with 
	ifoctet's db queries in general.

2010-03-31	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/db.pm: Database is now reconnecting on failed queries

	* pf/lib/pf/SNMP/ThreeCom/Switch_4200G.pm: Imported bugs and
	limitations section from parent (pf::SNMP::ThreeCom::SS4500).

2010-03-24      Regis Balzard <rbalzard@inverse.ca>
	* pf/lib/pf/services.pm: PF now creates static routes to routed Vlans 
	when dhcpd is enabled in networks.conf. It used to be when named was 
	enabled.

2010-03-16	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/packetfence.spec: Fix upgrade bug introduced in 1.8.5: Changed
	perl-Locale-gettext dependency to use the perl namespace version 
	perl(Locale-gettext). Fixes #931;
	http://www.packetfence.org/mantis/view.php?id=931
